// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-center extra_padding"
>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start dashboard_main"
  >
    <div
      className="layout-row flex-100 layout-align-space-between-start header"
    >
      <div
        className="layout-row flex-100 layout-align-start-center
              headerElement"
      >
        <div
          className="flex layout-row layout-align-space-around-center"
        >
          <div
            className="layout-row flex-none layout-align-center-center"
          >
            <i
              className="fa fa-user clip bigProfile"
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                }
              }
            />
          </div>
          <div
            className="welcome flex layout-row ccb_dashboard"
          >
            Welcome back,
             
             
            <b>
              John
            </b>
          </div>
        </div>
        <div
          className="flex-40 flex-sm-20 layout-row layout-align-end-center"
        >
          <SquareButton
            active={true}
            back={false}
            border={true}
            classNames="ccb_find_rates"
            disabled={false}
            handleDisabled={null}
            handleNext={[Function]}
            icon=""
            iconClass="fa-archive"
            size="large"
            text="Find Rates"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="layout-padding flex-100 layout-align-start-center greyBg"
    >
      <span>
        <b>
          Quoted Shipments
        </b>
      </span>
    </div>
    <ShipmentOverviewCard
      admin={false}
      confirmShipmentData={Object {}}
      dispatches={
        Object {
          "getShipment": [Function],
          "goTo": [Function],
        }
      }
      hubs={Object {}}
      noTitle={true}
      paginate={false}
      shipments={Array []}
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
    <div
      className="layout-row flex-100 layout-align-center-center space"
    >
      <span
        className="flex-15"
        onClick={[Function]}
      >
        <u>
          <b>
            See more shipments
          </b>
        </u>
      </span>
      <div
        className="flex-85 separator"
      />
    </div>
  </div>
</div>
`;

exports[`tenant is falsy 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-center extra_padding"
>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start dashboard_main"
  >
    <div
      className="layout-row flex-100 layout-align-space-between-start header"
    >
      <div
        className="layout-row flex-100 layout-align-start-center
              headerElement"
      >
        <div
          className="flex layout-row layout-align-space-around-center"
        >
          <div
            className="layout-row flex-none layout-align-center-center"
          >
            <i
              className="fa fa-user clip bigProfile"
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                }
              }
            />
          </div>
          <div
            className="welcome flex layout-row ccb_dashboard"
          >
            Welcome back,
             
             
            <b>
              John
            </b>
          </div>
        </div>
        <div
          className="flex-40 flex-sm-20 layout-row layout-align-end-center"
        >
          <SquareButton
            active={true}
            back={false}
            border={true}
            classNames="ccb_find_rates"
            disabled={false}
            handleDisabled={null}
            handleNext={[Function]}
            icon=""
            iconClass="fa-archive"
            size="large"
            text="Find Rates"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="layout-padding flex-100 layout-align-start-center greyBg"
    >
      <span>
        <b>
          Requested Shipments
        </b>
      </span>
    </div>
    <ShipmentOverviewCard
      admin={false}
      confirmShipmentData={Object {}}
      dispatches={
        Object {
          "getShipment": [Function],
          "goTo": [Function],
        }
      }
      hubs={Object {}}
      noTitle={true}
      paginate={false}
      shipments={Array []}
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
    <div
      className="layout-row flex-100 layout-align-center-center space"
    >
      <span
        className="flex-15"
        onClick={[Function]}
      >
        <u>
          <b>
            See more shipments
          </b>
        </u>
      </span>
      <div
        className="flex-85 separator"
      />
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-center-center"
  >
    <div
      className="flex-100 layout-row layout-wrap layout-align-center-stretch"
    >
      <AdminSearchableClients
        adminDispatch={null}
        clients={Array []}
        handleClick={[Function]}
        hideFilters={false}
        placeholder="Search Contacts"
        seeAll={[Function]}
        showTooltip={false}
        t={[Function]}
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
        title="Most used Contacts"
        tooltip=""
      />
    </div>
  </div>
</div>
`;

exports[`theme is falsy 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-center extra_padding"
>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start dashboard_main"
  >
    <div
      className="layout-row flex-100 layout-align-space-between-start header"
    >
      <div
        className="layout-row flex-100 layout-align-start-center
              headerElement"
      >
        <div
          className="flex layout-row layout-align-space-around-center"
        >
          <div
            className="layout-row flex-none layout-align-center-center"
          >
            <i
              className="fa fa-user clip bigProfile"
              style={
                Object {
                  "color": "black",
                }
              }
            />
          </div>
          <div
            className="welcome flex layout-row ccb_dashboard"
          >
            Welcome back,
             
             
            <b>
              John
            </b>
          </div>
        </div>
        <div
          className="flex-40 flex-sm-20 layout-row layout-align-end-center"
        >
          <SquareButton
            active={true}
            back={false}
            border={true}
            classNames="ccb_find_rates"
            disabled={false}
            handleDisabled={null}
            handleNext={[Function]}
            icon=""
            iconClass="fa-archive"
            size="large"
            text="Find Rates"
            theme={null}
          />
        </div>
      </div>
    </div>
    <div
      className="layout-padding flex-100 layout-align-start-center greyBg"
    >
      <span>
        <b>
          Quoted Shipments
        </b>
      </span>
    </div>
    <ShipmentOverviewCard
      admin={false}
      confirmShipmentData={Object {}}
      dispatches={
        Object {
          "getShipment": [Function],
          "goTo": [Function],
        }
      }
      hubs={Object {}}
      noTitle={true}
      paginate={false}
      shipments={Array []}
      t={[Function]}
      theme={null}
    />
    <div
      className="layout-row flex-100 layout-align-center-center space"
    >
      <span
        className="flex-15"
        onClick={[Function]}
      >
        <u>
          <b>
            See more shipments
          </b>
        </u>
      </span>
      <div
        className="flex-85 separator"
      />
    </div>
  </div>
</div>
`;

exports[`user is falsy 1`] = `
<withRouter(Connect(Loading))
  tenant={
    Object {
      "emails": Object {
        "sales": Object {
          "air": "sales@demo.com",
          "general": "sales@demo.com",
          "ocean": "sales@demo.com",
          "rail": "sales@demo.com",
        },
        "support": Object {
          "air": "imc.air@demo.com",
          "general": "support@demo.com",
          "ocean": "imc.sea@demo.com",
          "rail": "imc.rail@demo.com",
        },
      },
      "id": 123,
      "name": "TENANT_NAME",
      "phones": Object {
        "support": "TENANT_SUPPORT_PHONE",
      },
      "scope": Object {
        "cargo_info_level": "text",
        "carriage_options": Object {
          "on_carriage": Object {
            "export": "mandatory",
            "import": "mandatory",
          },
          "pre_carriage": Object {
            "export": "optional",
            "import": "optional",
          },
        },
        "closed_quotation_tool": true,
        "customs_export_paper": false,
        "detailed_billing": true,
        "has_customs": true,
        "has_insurance": true,
        "hide_grand_total": true,
        "mandatory_form_fields": Object {
          "description_of_goods": "MANDATORY_FIELDS_DESCRIPTION",
          "total_goods_value": 3370,
        },
        "modes_of_transport": Object {
          "air": Object {
            "AIR_LOAD_TYPE": 0,
          },
          "ocean": Object {
            "OCEAN_LOAD_TYPE": 2,
          },
          "rail": Object {
            "RAIL_LOAD_TYPE": 0,
          },
          "truck": Object {
            "TRUCK_LOAD_TYPE": 0,
          },
        },
        "terms": Array [
          "FOO_TERM",
          "BAR_TERM",
        ],
      },
      "subdomain": "TENANT_SUBDOMAIN",
      "theme": Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      },
    }
  }
  text=" Loading"
/>
`;
